--- a/django_project/flood/templates/flood/map.html
+++ b/django_project/flood/templates/flood/map.html
@@ -31,6 +31,12 @@
 </div>
  <script>
 
+   var tweetIcon = L.icon({
+    iconUrl: "{% static 'flood/images/tweet.png' %}",
+    iconSize:     [38, 95], // size of the icon
+    iconAnchor:   [22, 94], // point of the icon which will correspond to marker's location
+    popupAnchor:  [-3, -76] // point from which the popup should open relative to the iconAnchor
+});
    // initialize the map
    var map = L.map('map').setView([53.79, -1.55], 9);
 
@@ -65,7 +71,7 @@
                     var long = "{{ tweet.lng }}";
                     var html = '{{ tweet.html|safe }}';
                     if (html != ""){
-                        mark = new L.marker([lat,long]).bindPopup(html);
+                        mark = new L.marker([lat,long], {icon: tweetIcon}).bindPopup(html);
                         mark.addTo(markers)
                     }
                 </script>
