--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -117,13 +117,13 @@
             if (traceLeeds.x === 0 || traceLeeds.y.length == 0){ //if there is no river data available for the dates display message
                 document.write('<h4 style="text-align: center">No River level data available for the flood event selected.</h4>')
             }
-            else if (traceLeeds.length <= 1) { //if there is not enough river level data for the selected dates.
+            else if (traceLeeds.length < 1) { //if there is not enough river level data for the selected dates.
                 document.write('<h4 style="text-align: center">Not enough River level data available for selected flood event.</h4>')
             }
             else { //display river data for the selected data
                 document.write('<h4 style="text-align: center">Displaying River level data for the selected dates.</h4>'); //add relevant message
                 document.write('<p>Select a river level data source:</p>');
-                document.write(allbutton+leedsbutton+kirkbutton+castbutton+tadbutton+mythbutton);
+                document.write(allbutton+leedsbutton+kirkbutton+castbutton+tadbutton+mythbutton); //add buttons
                 document.write('<div id="riverGraph" style="min-width: 1100px; width:100%; height: 400px;"><!-- Plotly chart will be drawn inside this DIV --></div>'); //add the graph to the webpage
                 Plotly.newPlot(riverGraph, alldata);
             }
