added extra information to the home page.

--- a/django_project/flood/templates/flood/index.html
+++ b/django_project/flood/templates/flood/index.html
@@ -41,8 +41,10 @@
           </h4>
         </div>
         <div id="collapse1" class="panel-collapse collapse in">
-          <div class="panel-body">This website resource was produced as part of a research
-            project for the University of Leeds.<br>This website uses Environment Agency flood and river level data from the real-time data API (Beta)
+          <div class="panel-body">This website resource was produced for a final year research
+            project for the School of Computing, University of Leeds.<br>
+            This website is a proof of concept project, potential data sources related to flooding have been visualised on the website.<br>
+            This page uses Environment Agency real-time data API (Beta) to gather flood warnings.<br>
 </div>
         </div>
       </div>
@@ -53,8 +55,8 @@
           </h4>
         </div>
         <div id="collapse2" class="panel-collapse collapse">
-          <div class="panel-body">The map page consists of geo-located photographs sourced from Flickr and Instagram.<br>
-            There are also geo-tagged tweets plotted to this map relating to the flooding on the 26/12/2015<br>
+          <div class="panel-body">The map page plots geo-located photographs of flooding in West Yorkshire sourced from Flickr and Instagram.<br>
+            There are also geo-tagged tweets plotted to this map related to the floods which affected West Yorkshire starting on the 26/12/2015<br>
           </div>
         </div>
       </div>
@@ -65,8 +67,10 @@
           </h4>
         </div>
         <div id="collapse3" class="panel-collapse collapse">
-          <div class="panel-body">The timeline page provides a breakdown of all the flood data (photos, rain-levels and tweets)<br>
-
+          <div class="panel-body">The timeline page displays a graph of river levels of several river level gauges situated in West Yorkshire.<br>
+            The timeline page also displays photographs and tweets on a descending timeline.<br>
+            Both the river level data and timeline can be filtered based on different flood event periods.<br>
+            Each photo displayed on the timeline has a score. These scores are decided by voting on the photos using the up and down buttons.<br>
           </div>
         </div>
       </div>
