Added more info to index page.

--- a/django_project/flood/templates/flood/index.html
+++ b/django_project/flood/templates/flood/index.html
@@ -41,7 +41,10 @@
           </h4>
         </div>
         <div id="collapse1" class="panel-collapse collapse in">
-          <div class="panel-body">This website resource was produced for a final year research
+          <div class="panel-body">
+            This website aims to provide a view of the extent of flooding experienced in West Yorkshire.<br>
+            It uses various forms data to visualise the flooding. It also provides live photographic updates and flood warnings for West Yorkshire.<br>
+            This website resource was produced for a final year research
             project for the School of Computing, University of Leeds.<br>
             This website is a proof of concept project, potential data sources related to flooding have been visualised on the website.<br>
             This page uses Environment Agency real-time data API (Beta) to gather flood warnings.<br>
