Added more info to index page.

--- a/django_project/flood/templates/flood/index.html
+++ b/django_project/flood/templates/flood/index.html
@@ -78,6 +78,8 @@
         </div>
       </div>
     </div>
+    <p>If you you would like to report, or remove a tweet or image you own on the site,
+      email mspstead@gmail.com</p>
   </div>
 </body>
 </html>
